@@ -106,6 +106,9 @@ Bug fixes
 * LUCENE-5466: query is always null in countDocsWithClass() of SimpleNaiveBayesClassifier.
   (Koji Sekiguchi)
 
+* LUCENE-5481: IndexWriter.forceMerge used to run a merge even if there was a
+  single segment in the index. (Adrien Grand, Mike McCandless)
+
 Test Framework
 
 * LUCENE-5449: Rename _TestUtil and _TestHelper to remove the leading _.
